# po2_metalib

./: .gitignore  CMakeLists.txt
bench/: copy_metabench_web.fish
bench/list/at/: at_monad_track.cpp  at_tracked.cpp  naive_at.cpp
bench/list/create/: flat.cpp  linked.cpp  po2.cpp
bench/list/push_front/: flat.cpp  linked.cpp  po2.cpp
bench/list/push_front/n_times_1/: flat.cpp  flat_eager.cpp  linked.cpp  linked_eager.cpp  po2.cpp
doc/: Doxyfile
src/: lib.hpp  main.cpp  metashell_main.cpp  run_metashell.sh
src/binary_tree/: binary_search.hpp  flatten.hpp  tree_node.hpp  tree_sort.hpp
src/list/: list.hpp  pair.hpp  split.hpp
src/list/linkedlist/: linked_list.hpp  po2_list.hpp
